[tool.poetry]
name = "serve-gitbook"
version = "0.1.0"
description = "A FastAPI service to fetch GitBook content"
authors = ["Rijumone Choudhuri <mailmeonriju@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
start-app = "serve_gitbook.main:app"
